--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Curriculum de Binca Shinaasi, UX|UI designer. 
-description: Here you will find my professional experience and my latest work. 
+title: Binca Shinaasi, UX|UI designer. 
+description: Curriculum of Binca Shinaasi. Here you will find my professional experience and my latest work. 
